# terminana

./: .env.example  README.md  pyproject.toml  requirements.txt
scripts/: chat_tools.py  terminana.py  test_tools.py
terminana/: __init__.py  cli.py
terminana/auth/: __init__.py  openai_oauth.py  openai_oauth_login.py  openai_oauth_store.py
terminana/chat/: __init__.py  session.py  setup.py  telegram.py  terminal.py
terminana/config/: __init__.py  settings.py
terminana/core/: __init__.py  pexpect_tools.py  system_tools.py
terminana/tools/: __init__.py  decorator.py  generate.py
terminana/tools/json/: calculate.json  get_system_info.json  run_command.json  spawn_and_interact.json  tools.json
